tasks/serde-rs__serde-2405/tests/test_suite/tests/ui/unexpected-literal/variant.stderr
error: expected identifier
 --> tests/ui/unexpected-literal/variant.rs:5:13
  |
5 |     #[serde("literal")]
  |             ^^^^^^^^^
